--- a/example.yml
+++ b/example.yml
@@ -57,6 +57,18 @@ modules:
     timeout: 5s
     tcp:
       tls: true
+  udp_connect:
+    prober: udp
+    udp:
+      preferred_ip_protocol: "ip4"
+      connect_response:
+        send: "ok"
+        expect: "ok"
+      query_response:
+        - send: "ok"
+          expect: "ok"
+        - send: "test"
+          expect: "ok"
   tcp_connect_example:
     prober: tcp
     timeout: 5s
